--- a/gr7_thema1.ipynb
+++ b/gr7_thema1.ipynb
@@ -35,6 +35,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27d2c78d",
+   "metadata": {},
+   "source": [
+    "## 0. Requirements\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "329e0275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dd73ccd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy Version: 2.2.6\n",
+      "Pandas Version: 2.3.3\n",
+      "Scikit-Learn Version: 1.7.1\n",
+      "Torch Version: 2.9.1+cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sklearn\n",
+    "import torch\n",
+    "\n",
+    "print(\"Numpy Version:\", np.__version__)\n",
+    "print(\"Pandas Version:\", pd.__version__)\n",
+    "print(\"Scikit-Learn Version:\", sklearn.__version__)\n",
+    "print(\"Torch Version:\",torch.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aedf6293",
    "metadata": {},
    "source": [
