--- a/gr7_thema1.ipynb
+++ b/gr7_thema1.ipynb
@@ -1,205 +1,335 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "b0112f0c",
-   "metadata": {},
-   "source": [
-    "# Projektarbeit Machine Learning und Deep Learning (Gruppe 7)\n",
-    "---\n",
-    "\n",
-    "Chris-Josip Puclin, Natalie Rudolf, Tina Schiele"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78bdd92b",
-   "metadata": {},
-   "source": [
-    "**Aufgabenstellung**\n",
-    "\n",
-    "* Datensatz: MVTec AD (Quelle: https://www.mvtec.com/company/research/datasets/mvtec-ad)\n",
-    "* Datensatzbeschreibung: „comprises 15 categories with 3629 images for training and validation and 1725 images for testing.The training set contains only images without defects. The test set contains both: images containing various types of defects and defect-free images.“\n",
-    "* Klassifikationsproblem für das gesamte Bild (image-level classification); z.B.: Liegt ein Fehler im aktuellen Bild vor? Um welches Objekt handelt es sich? etc.\n",
-    "* Hierzu müssen zunächst die Metainformationen (Labels) angepasst werden, sowie Training- und Testdatensatz neu gemischt werden.\n",
-    "\n",
-    "**Ideen:**\n",
-    "* Stand der Forschung sichten (es gibt etliche Papers, wir möchten uns auf image-level classification fokussieren)\n",
-    "* Man könnte z.B. hierarchische Klassifikation einsetzen: 1) welches Objekt, 2) IO oder NIO\n",
-    "* Man könnte das Problem als two-class classification problem ansehen\n",
-    "* Oder als multi-class classification Problem (Objekt + IO/NIO => 30 Klassen)\n",
-    "\n",
-    "\n",
-    "Das nachfolgende Projekt orientiert sich in seinem Aufbau und seiner Struktur am CRISP-DM Modell."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27d2c78d",
-   "metadata": {},
-   "source": [
-    "## 0. Requirements\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "329e0275",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "dd73ccd0",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numpy Version: 2.2.6\n",
-      "Pandas Version: 2.3.3\n",
-      "Scikit-Learn Version: 1.7.1\n",
-      "Torch Version: 2.9.1+cpu\n"
-     ]
+      "cell_type": "markdown",
+      "id": "b0112f0c",
+      "metadata": {
+        "id": "b0112f0c"
+      },
+      "source": [
+        "# Projektarbeit Machine Learning und Deep Learning (Gruppe 7)\n",
+        "---\n",
+        "\n",
+        "Chris-Josip Puclin, Natalie Rudolf, Tina Schiele"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "78bdd92b",
+      "metadata": {
+        "id": "78bdd92b"
+      },
+      "source": [
+        "**Aufgabenstellung**\n",
+        "\n",
+        "* Datensatz: MVTec AD (Quelle: https://www.mvtec.com/company/research/datasets/mvtec-ad)\n",
+        "* Datensatzbeschreibung: „comprises 15 categories with 3629 images for training and validation and 1725 images for testing.The training set contains only images without defects. The test set contains both: images containing various types of defects and defect-free images.“\n",
+        "* Klassifikationsproblem für das gesamte Bild (image-level classification); z.B.: Liegt ein Fehler im aktuellen Bild vor? Um welches Objekt handelt es sich? etc.\n",
+        "* Hierzu müssen zunächst die Metainformationen (Labels) angepasst werden, sowie Training- und Testdatensatz neu gemischt werden.\n",
+        "\n",
+        "**Ideen:**\n",
+        "* Stand der Forschung sichten (es gibt etliche Papers, wir möchten uns auf image-level classification fokussieren)\n",
+        "* Man könnte z.B. hierarchische Klassifikation einsetzen: 1) welches Objekt, 2) IO oder NIO\n",
+        "* Man könnte das Problem als two-class classification problem ansehen\n",
+        "* Oder als multi-class classification Problem (Objekt + IO/NIO => 30 Klassen)\n",
+        "\n",
+        "\n",
+        "Das nachfolgende Projekt orientiert sich in seinem Aufbau und seiner Struktur am CRISP-DM Modell."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "27d2c78d",
+      "metadata": {
+        "id": "27d2c78d"
+      },
+      "source": [
+        "## 0. Requirements\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Auf das Standardverzeichnis wechseln\n",
+        "os.chdir(\"/content\")\n",
+        "\n",
+        "# Prüfen\n",
+        "!pwd\n"
+      ],
+      "metadata": {
+        "id": "4Md0mOmzhxEo",
+        "outputId": "170c300e-1f55-4b6c-d74a-8b5e1c78324c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "4Md0mOmzhxEo",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# komplettes Repo aus Github kopieren (für Google Colab)\n",
+        "\n",
+        "# ==============================\n",
+        "# 📦 COLAB STARTZELLE (TEAM)\n",
+        "# ==============================\n",
+        "\n",
+        "import shutil\n",
+        "import os\n",
+        "\n",
+        "# Arbeitsverzeichnis auf /content setzen\n",
+        "os.chdir(\"/content\")\n",
+        "\n",
+        "# Name des Repos / Zielordners\n",
+        "repo_name = \"MLDL\"\n",
+        "\n",
+        "# Ordner löschen, falls vorhanden\n",
+        "if os.path.exists(repo_name):\n",
+        "    shutil.rmtree(repo_name)\n",
+        "    print(f\"Ordner '{repo_name}' wurde gelöscht\")\n",
+        "\n",
+        "# Repo klonen\n",
+        "REPO_URL = \"https://github.com/NRU310/MLDL.git\"\n",
+        "!git clone $REPO_URL\n",
+        "\n",
+        "# Ins geklonte Repo wechseln\n",
+        "%cd $repo_name\n",
+        "\n",
+        "# Projektpfad setzen\n",
+        "import sys\n",
+        "sys.path.append(\"src\")"
+      ],
+      "metadata": {
+        "id": "x7L_O1TugJgq",
+        "outputId": "c65af560-4076-4bc9-99fe-86a21bac439c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "x7L_O1TugJgq",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ordner 'MLDL' wurde gelöscht\n",
+            "Cloning into 'MLDL'...\n",
+            "remote: Enumerating objects: 15, done.\u001b[K\n",
+            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
+            "Receiving objects: 100% (15/15), 4.53 KiB | 4.53 MiB/s, done.\n",
+            "Resolving deltas: 100% (5/5), done.\n",
+            "remote: Total 15 (delta 5), reused 9 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
+            "/content/MLDL\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "329e0275",
+      "metadata": {
+        "id": "329e0275"
+      },
+      "outputs": [],
+      "source": [
+        "%pip install -r requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "dd73ccd0",
+      "metadata": {
+        "id": "dd73ccd0",
+        "outputId": "ecd5eff6-af82-4b59-94fa-e5238922c8bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numpy Version: 2.2.6\n",
+            "Pandas Version: 2.3.3\n",
+            "Scikit-Learn Version: 1.7.1\n",
+            "Torch Version: 2.9.1+cu128\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import sklearn\n",
+        "import torch\n",
+        "\n",
+        "print(\"Numpy Version:\", np.__version__)\n",
+        "print(\"Pandas Version:\", pd.__version__)\n",
+        "print(\"Scikit-Learn Version:\", sklearn.__version__)\n",
+        "print(\"Torch Version:\",torch.__version__)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "aedf6293",
+      "metadata": {
+        "id": "aedf6293"
+      },
+      "source": [
+        "## 1. Project Understanding\n",
+        "---\n",
+        "*Papers, die sich mit image-level classification beschäftigen*\n",
+        "\n",
+        "*in diesem Abschnitt kein Code, sondern qualitative Beschreibung, was wir tun wollen*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f4bc38d7",
+      "metadata": {
+        "id": "f4bc38d7"
+      },
+      "source": [
+        "## 2. Data Understanding\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "616ba09a",
+      "metadata": {
+        "id": "616ba09a"
+      },
+      "source": [
+        "*Datensatzbeschreibung: „comprises 15 categories with 3629 images for training and validation and 1725 images for testing.The training set contains only images without defects. The test set contains both: images containing various types of defects and defect-free images.“*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c72b775a",
+      "metadata": {
+        "id": "c72b775a"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "055a294a",
+      "metadata": {
+        "id": "055a294a"
+      },
+      "source": [
+        "## 3. Data Preparation\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "05dd88d7",
+      "metadata": {
+        "id": "05dd88d7"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a474ecf5",
+      "metadata": {
+        "id": "a474ecf5"
+      },
+      "source": [
+        "## 4. Modeling\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7a6121cb",
+      "metadata": {
+        "id": "7a6121cb"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "da64bf24",
+      "metadata": {
+        "id": "da64bf24"
+      },
+      "source": [
+        "## 5. Evaluation\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0f7416ba",
+      "metadata": {
+        "id": "0f7416ba"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "098c10f2",
+      "metadata": {
+        "id": "098c10f2"
+      },
+      "source": [
+        "## 6. Deployment\n",
+        "---\n",
+        "\n",
+        "Grundsätzlich entfällt dieser Schritt, da der entwickelte Algorithmus nicht produktiv genutzt werden soll. Die Ergebnisse werden in der Abschlusspräsentation vorgestellt."
+      ]
     }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sklearn\n",
-    "import torch\n",
-    "\n",
-    "print(\"Numpy Version:\", np.__version__)\n",
-    "print(\"Pandas Version:\", pd.__version__)\n",
-    "print(\"Scikit-Learn Version:\", sklearn.__version__)\n",
-    "print(\"Torch Version:\",torch.__version__)"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "ml_env_312",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "aedf6293",
-   "metadata": {},
-   "source": [
-    "## 1. Project Understanding\n",
-    "---\n",
-    "*Papers, die sich mit image-level classification beschäftigen*\n",
-    "\n",
-    "*in diesem Abschnitt kein Code, sondern qualitative Beschreibung, was wir tun wollen*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4bc38d7",
-   "metadata": {},
-   "source": [
-    "## 2. Data Understanding\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "616ba09a",
-   "metadata": {},
-   "source": [
-    "*Datensatzbeschreibung: „comprises 15 categories with 3629 images for training and validation and 1725 images for testing.The training set contains only images without defects. The test set contains both: images containing various types of defects and defect-free images.“*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c72b775a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "055a294a",
-   "metadata": {},
-   "source": [
-    "## 3. Data Preparation \n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05dd88d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a474ecf5",
-   "metadata": {},
-   "source": [
-    "## 4. Modeling\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a6121cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da64bf24",
-   "metadata": {},
-   "source": [
-    "## 5. Evaluation\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f7416ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "098c10f2",
-   "metadata": {},
-   "source": [
-    "## 6. Deployment\n",
-    "---\n",
-    "\n",
-    "Grundsätzlich entfällt dieser Schritt, da der entwickelte Algorithmus nicht produktiv genutzt werden soll. Die Ergebnisse werden in der Abschlusspräsentation vorgestellt."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "ml_env_312",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
