Mit Colab erstellt

--- a/gr7_thema1.ipynb
+++ b/gr7_thema1.ipynb
@@ -61,13 +61,13 @@
       ],
       "metadata": {
         "id": "4Md0mOmzhxEo",
-        "outputId": "f9202bb9-7200-4575-a9a9-ec6dc9379143",
+        "outputId": "590047fc-dade-4b7f-9446-462caaf586e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "4Md0mOmzhxEo",
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,13 +114,13 @@
       ],
       "metadata": {
         "id": "x7L_O1TugJgq",
-        "outputId": "50ab8ad0-c2a2-4d2e-c6b6-902c57a60bb5",
+        "outputId": "f32cc1fa-2727-4eb1-9b96-cc50e1c3c003",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "x7L_O1TugJgq",
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,12 +128,12 @@
           "text": [
             "Ordner 'MLDL' wurde gelöscht\n",
             "Cloning into 'MLDL'...\n",
-            "remote: Enumerating objects: 30, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
-            "remote: Total 30 (delta 12), reused 8 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (30/30), 13.32 KiB | 1.48 MiB/s, done.\n",
-            "Resolving deltas: 100% (12/12), done.\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
+            "remote: Total 33 (delta 14), reused 8 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (33/33), 14.39 KiB | 2.40 MiB/s, done.\n",
+            "Resolving deltas: 100% (14/14), done.\n",
             "/content/MLDL\n"
           ]
         }
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "329e0275",
       "metadata": {
         "id": "329e0275",
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "dd73ccd0",
       "metadata": {
         "id": "dd73ccd0",
@@ -275,14 +275,21 @@
         "---\n",
         "*Papers, die sich mit image-level classification beschäftigen*\n",
         "\n",
-        "*in diesem Abschnitt kein Code, sondern qualitative Beschreibung, was wir tun wollen*\n",
-        "\n",
         "Wissenschaftliche Papers:\n",
-        "* Research on Image Classification Algorithm Based on Pytorch https://iopscience.iop.org/article/10.1088/1742-6596/2010/1/012009/meta\n",
-        "* ...\n",
+        "* Research on Image Classification Algorithm Based on Pytorch (https://iopscience.iop.org/article/10.1088/1742-6596/2010/1/012009/meta)\n",
+        "* Multi-class Image Classification Using Deep Learning Algorithm (https://iopscience.iop.org/article/10.1088/1742-6596/1447/1/012021/meta)\n",
         "\n",
         "Bücher:\n",
-        "* Praxiseinstieg Machine Learning mit Scikit-Learn, Keras und TensorFlow (verfügbar als e-book im Bibliothekskatalog)\n"
+        "* Praxiseinstieg Machine Learning mit Scikit-Learn, Keras und TensorFlow, z.B. Kapitel 14 (verfügbar als e-book im Bibliothekskatalog)\n",
+        "\n",
+        "\n",
+        "\n",
+        "*qualitative Beschreibung, was wir tun wollen*\n",
+        "\n",
+        "**image-level classification**\n",
+        "* two-class classification problem\n",
+        "* multi-class classification problem (Objekt + IO/NIO => 30 Klassen)\n",
+        "\n"
       ]
     },
     {
