Mit Colab erstellt

--- a/gr7_thema1.ipynb
+++ b/gr7_thema1.ipynb
@@ -397,7 +397,7 @@
         "## 6. Deployment\n",
         "---\n",
         "\n",
-        "Grundsätzlich entfällt dieser Schritt, da der entwickelte Algorithmus nicht produktiv genutzt werden soll. Die Ergebnisse werden in der Abschlusspräsentation vorgestellt."
+        "*Dieser Schritt entfällt, da der entwickelte Algorithmus nicht produktiv genutzt werden soll. Die Ergebnisse werden in der Abschlusspräsentation vorgestellt.*"
       ]
     }
   ],
